Extended use of List.of instead of Collections